--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
             <version>4.1.0</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
@@ -36,6 +37,7 @@
             <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
+
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -85,17 +87,23 @@
         </dependency>
 
         <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>13.0.0</version> <!-- Compatible con Jakarta EE 10 -->
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>11.0.0</version>
+            <scope>provided</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>15.0.4</version>
+            <classifier>jakarta</classifier>
+        </dependency>
 
         <dependency>
             <groupId>jakarta.faces</groupId>
             <artifactId>jakarta.faces-api</artifactId>
-            <version>3.0.0</version>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
 
