--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
 
         <!-- Implementación de referencia (Hibernate Validator) -->
         <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>8.0.1.Final</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core-jakarta</artifactId>
+            <version>5.6.15.Final</version>
         </dependency>
 
         <dependency>
